# arc-agi-3-offline-agent

./: .env.example  .gitignore  CONTRACT.md  DECISION-LOG.md  HACKATHON-BATTLEPLAN.md  HANDOFF.md  LICENSE  Makefile  NOTICE  README.md  SPEC.md  conftest.py  pyproject.toml
agent/: my_agent.py  occam_bundle.py
data/demos/: demos.npz
eval/: rhae.py
experiments/: determinism.py  reset_counting.py
notebooks/: kernel-metadata.json
scripts/: build_notebook.py  bundle_occam.py  gen_demos.py  play_local.py  slim_framework.py  train_student.py
tests/: test_my_agent.py
