[project]
name = "arc-agi-3-offline-agent"
version = "0.1.0"
description = "Offline, symbolic, solve-rate-first agent for ARC Prize 2026 — ARC-AGI-3"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "arc-agi>=0.9.6",
    "numpy>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
